--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/root/miniconda3/envs/test/bin/python"
+    "python.pythonPath": "/root/miniconda3/envs/test2/bin/python",
+    "python.formatting.provider": "yapf"
 }
